--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ margin: 0;
 <body>
 <p>Navigate:</p>
 <ul><li><a href="privacy-policy">Privacy Policy</a></li>
-<li><a href="terms">Terms of Use</a></li></ul>
+<li><a href="terms-of-use">Terms of Use</a></li></ul>
 
 </body>
 </html>
