--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,6 @@
 <header>
 <title>Mintt | Sign Up for Our Newsletter</title>
 
-<link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 body {
 width: 700px;
@@ -50,16 +49,16 @@ font-weight: bold;
 
 #mc_embed_signup label {
 font-size: 14px;
-padding: .2em;
+padding: .2em 0 0 0;
 color: #333;
 text-transform: uppercase;
 }
 
 #mc_embed_signup input {
 font-size: 22px;
-padding: .2em;
+padding: .5em;
 background-color: #fff;
-color: #333;
+color: #999;
 border: 1px solid #333;
 width: 480px;
 }
@@ -68,62 +67,22 @@ width: 480px;
 margin-top: 1em;
 }
 
-.btn-14,
-.btn-14 *,
-.btn-14 :after,
-.btn-14 :before,
-.btn-14:after,
-.btn-14:before {
-  border: 0 solid;
-  box-sizing: border-box;
-}
-.btn-14 {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-appearance: button;
-  background-color: #2dae4f;
-  background-image: none;
-  border: 0 !important;
-  color: #fff !important;
-  cursor: pointer;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+#mc_embed_signup .button{
+display: block;
+color: #fff;
+cursor: pointer;
+font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  font-weight: 900;
-  margin: 1em 0;
-  width: 240px !important;
-  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
-  padding: 0;
-  text-transform: uppercase;
-}
-.btn-14:disabled {
-  cursor: default;
-}
-.btn-14:-moz-focusring {
-  outline: auto;
-}
-.btn-14 svg {
-  display: block;
-  vertical-align: middle;
-}
-.btn-14 [hidden] {
-  display: none;
-}
-.btn-14 {
-  background: #2dae4f !important;
-  border-radius: 99rem;
-  -webkit-mask-image: none;
-  overflow: hidden;
-  padding: 0.8rem 3rem !important;
-  position: relative;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-.btn-14 span {
-  mix-blend-mode: difference;
-}
-.btn-14:hover {
-  box-shadow: 0 20px 100px 1px hsla(0, 0%, 100%, 0.2);
-  transform: translateY(-4px);
-  will-change: box-shadow, transform;
+font-weight: 900;
+margin: 1em auto;
+width: 240px;
+text-transform: uppercase;
+background-color: #2dae4f;
+border: 0;
+border-radius: 99rem;
+overflow: hidden;
+padding: 0.8rem 3rem;
 }
 
 </style>
@@ -150,7 +109,7 @@ margin-top: 1em;
         <div id="mce-responses" class="clear">
             <div class="response" id="mce-error-response" style="display: none;"></div>
             <div class="response" id="mce-success-response" style="display: none;"></div>
-        </div><div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_b230aa6a8b06f74ed1a0c6d2b_bcbae5b49a" tabindex="-1" value=""></div><div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn-14" value="Subscribe"></div>
+        </div><div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text" name="b_b230aa6a8b06f74ed1a0c6d2b_bcbae5b49a" tabindex="-1" value=""></div><div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe"></div>
     </div>
 </form>
 </div>
